--- a/repo/welcome.html
+++ b/repo/welcome.html
@@ -6,5 +6,12 @@
 <body>
   <h1>Weclome to my page</h1>
   <p> By the way, what are you doing here???</p>
+  <h2>Important Dates</h2>
+<p><i>January 15, 2019</i> - wikiHow's Birthday</p>
+
+<h2>Links</h2>
+<p>Here is a link to wikiHow: <a href="www.wikihow.com">www.wikihow.com</a></p>
+<a href="www.facebook.com">This is the link to Facebook's website</a>.
+
 </body>
 </html>
