--- a/repo/welcome.html
+++ b/repo/welcome.html
@@ -2,9 +2,74 @@
 <html>
 <head>
   <title>Welcome</title>
+  <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
-  <h1>Weclome to my page</h1>
-  <p> By the way, what are you doing here</p>
+<h1 style="
+background-color: green;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    margin: 20px;
+    border-style: solid;
+    border-width: 10px;
+    border-color: yellow;
+">Weclome to my page</h1>
+<h2>My name is Bob.</h2>
+<h3>I hope you like it here.</h3>
+<p> By the way, what are you doing here???</p>
+<p><font color="blue">Whales are majestic creatures.</font></p>
+<b>Bold text</b>
+<i>Italic text</i>
+<u>Underlined text</u>
+<sub>Subscript text</sub>
+<sup>Superscript text</sup>
+<img src="www.mypicture.com/lake"></img>
+<a href="www.facebook.com">This is the link to Facebook's website</a>.
+<br>
+<strong>Maecenas nisl est, rhoncus id cursus non, tempor a neque.</strong>
+<hr>
+Phasellus venenatis dapibus laoreet. Sed in lacus a augue rutrum ultricies.
+Donec eget lacinia elit. Suspendisse commodo justo at lorem molestie, vitae
+tempus enim laoreet.
+<ol>
+   <li>apples</li>
+   <li>oranges</li>
+   <li>pineapples</li>
+   <li>mangoes</li>
+   <li>dragonfruit</li>
+</ol>
+<ul>
+   <li>apples
+      <ul>
+         <li>golden delicious</li>
+         <li>granny smith</li>
+         <li>gala</li>
+      </ul>
+   </li>
+   <li>oranges</li>
+   <li>pineapples</li>
+   <li>mangoes</li>
+   <li>dragonfruit</li>
+</ul>
+<table border="1">
+   <tr>
+      <th>Month</th>
+      <th>Rent</th>
+      <th>Utilities</th>
+      <th>Groceries</th>
+      <th>Eating Out</th>
+      <th>Entertainment</th>
+   </tr>
+   <tr>
+      <td>Row 1 - 1st element</td>
+      <td>Row 1 - 2nd element</td>
+      <td>Row 1 - 3rd element</td>
+      <td>Row 1 - 4th element</td>
+      <td>Row 1 - 5th element</td>
+      <td>Row 1 - 6th element</td>
+   </tr>
+</table>
+
 </body>
 </html>
